--- a/docker_ex3/docker-compose.yml
+++ b/docker_ex3/docker-compose.yml
@@ -4,10 +4,21 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
-  # TODO: add your code here (delete this line and follow the indent conventions)
+
   app:
-    # TODO: you will need to add to this
+    build: ./backend
+    ports:
+      - "5000:5000"
     environment:
       - REDIS_HOST=redis
+    depends_on:
+      - redis
+
   frontend:
-    # TODO: you will need to add to this
+    build: ./frontend
+    ports:
+      - "3901:3901"
+    environment:
+      - REACT_APP_API_URL=http://localhost:5000
+    depends_on:
+      - app
